--- a/module2/main.css
+++ b/module2/main.css
@@ -12,6 +12,7 @@ h1 {
 font-family: cursive;
 color: black; 
 text-align: center;
+position: relative;
 }
 h2 {
     display: inline-block;
@@ -40,25 +41,36 @@ h2 {
 }
 
 .section {
+    float: left;
     background-color: #ebebeb;
     border: 1px solid black;
     position: relative;
-    min-height: 200px;
+    min-height: 175px;
     margin-right: 15px;
-    margin-left: auto;
+    margin-left: 15px;
     margin-bottom: 15px;
-    padding: 20px;
+    padding: 10px 10px 0px 10px;
     padding-top: 35px;
     box-sizing: border-box;
     min-width: 300px;
     overflow: hidden;
+}
+
+p {
+    padding: 10px 10px 0px 0px;
+}
 
 }        
 /* Responsive Framework */
 
 .row {
     width: 100%;
-    margin: 15px;   
+    margin: 15px;
+    margin-right: 15px;
+    margin-left: 15px;
+    margin-bottom: 15px;
+    padding: 10px 10px 0px 10px;
+
 }
 /************* Desktop Only *************/
 @media (min-width: 992px) {
@@ -144,6 +156,7 @@ h2 {
     .col-md-12 {
         width: 100%;
     }
+
 }
 
 /************* Mobile phones Only *************/
