--- a/module2/main.css
+++ b/module2/main.css
@@ -45,14 +45,14 @@ h2 {
     background-color: #ebebeb;
     border: 1px solid black;
     position: relative;
-    min-height: 175px;
+    min-height: auto;
     margin-right: 15px;
     margin-left: 15px;
     margin-bottom: 15px;
     padding: 10px 10px 0px 10px;
     padding-top: 35px;
     box-sizing: border-box;
-    min-width: 300px;
+    min-width: auto;
     overflow: hidden;
 }
 
@@ -66,11 +66,6 @@ p {
 .row {
     width: 100%;
     margin: 15px;
-    margin-right: 15px;
-    margin-left: 15px;
-    margin-bottom: 15px;
-    padding: 10px 10px 0px 10px;
-
 }
 /************* Desktop Only *************/
 @media (min-width: 992px) {
